# Vid-Stream-CV

./: README.md
create_func/: trasf_func.cpp
src/: CMakeLists.txt  README.md  gstreamer.cpp  gstreamer_with_opencv.cpp  main.cpp
test/: test.cpp
